[gd_scene load_steps=2 format=3 uid="uid://d2e3f4g5h6i7"]

[ext_resource type="Script" path="res://scripts/RoomJoining.gd" id="1_0x1y2"]

[node name="RoomJoining" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_0x1y2")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.1, 0.1, 0.2, 1)

[node name="UI" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Title" type="Label" parent="UI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = -100.0
text = "JOIN ROOM"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RoomCodeLabel" type="Label" parent="UI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -50.0
offset_right = 200.0
offset_bottom = -20.0
text = "Enter Room Code:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RoomCodeInput" type="LineEdit" parent="UI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -20.0
offset_right = 100.0
offset_bottom = 20.0
placeholder_text = "123456"
max_length = 6

[node name="IPLabel" type="Label" parent="UI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = 20.0
offset_right = 200.0
offset_bottom = 50.0
text = "Host IP Address:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="IPInput" type="LineEdit" parent="UI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = 50.0
offset_right = 100.0
offset_bottom = 90.0
placeholder_text = "192.168.1.100"
text = "127.0.0.1"

[node name="StatusLabel" type="Label" parent="UI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = 90.0
offset_right = 200.0
offset_bottom = 120.0
text = ""
horizontal_alignment = 1
vertical_alignment = 1

[node name="ButtonContainer" type="VBoxContainer" parent="UI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = 130.0
offset_right = 100.0
offset_bottom = 230.0

[node name="JoinButton" type="Button" parent="UI/ButtonContainer"]
layout_mode = 2
text = "Join Room"

[node name="BackButton" type="Button" parent="UI/ButtonContainer"]
layout_mode = 2
text = "Back"
